Add YSlow bootstrapper.
YSlow can't record page load times for the first page the browser loads,
since it relies on the previous page's unload event. As a workaround,
load this page instead with a query parameter named 'url' pointing to
the real page. It will immediately redirect. Also, set
showslowIgnore=1 on the url to prevent the bootstrapper from showing
up in the results.

--- a/yslow_launch.html
+++ b/yslow_launch.html
@@ -2,11 +2,15 @@
 <head>
 <script>
 	function redirect() {
-		var url = location.href;
-		var query = url.substring(url.indexOf('?') + 1);
-		var redir = decodeURIComponent(query);
-		location.href = redir;
+		location.href = getParamByName('url');
 	}
+
+  function getParamByName(name) {
+    var match = RegExp('[?&]' + name + '=([^&]*)')
+                    .exec(window.location.search);
+    return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+  }
+
 </script>
 </head>
 <body onload="redirect();">
